[gd_scene load_steps=10 format=2]

[ext_resource path="res://data/scripts/map_ui.gd" type="Script" id=1]
[ext_resource path="res://data/graphics/map_placeholder.jpg" type="Texture" id=2]
[ext_resource path="res://data/graphics/map01.png" type="Texture" id=3]
[ext_resource path="res://data/graphics/map02.png" type="Texture" id=4]
[ext_resource path="res://data/graphics/map03.png" type="Texture" id=5]
[ext_resource path="res://data/fonts/comic_bold.font" type="BitmapFont" id=6]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 29.8033, 30.854 )

[sub_resource type="RectangleShape2D" id=2]

custom_solver_bias = 0.0
extents = Vector2( 29.0951, 32.4395 )

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 28.2209, 31.8639 )

[node name="Area2D" type="Area2D"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
script = ExtResource( 1 )

[node name="TextureFrame" type="TextureRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1007.0
margin_bottom = 627.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 2 )
stretch_mode = 0

[node name="map01" type="Area2D" parent="." index="1"]

position = Vector2( 410.662, 225.152 )
scale = Vector2( 1.66398, 1.09939 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Sprite" type="Sprite" parent="map01" index="0"]

visible = false
position = Vector2( -0.973775, -3.96312 )
scale = Vector2( 0.284043, 0.432771 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="map01" index="1"]

position = Vector2( 0, 2.67455 )
shape = SubResource( 1 )

[node name="map02" type="Area2D" parent="." index="2"]

position = Vector2( 539.268, 231.469 )
scale = Vector2( 1.56527, 1.2404 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Sprite" type="Sprite" parent="map02" index="0"]

visible = false
position = Vector2( -0.0669003, -1.86436 )
scale = Vector2( 0.298852, 0.36226 )
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="map02" index="1"]

position = Vector2( 0, 0.592606 )
shape = SubResource( 2 )

[node name="map03" type="Area2D" parent="." index="3"]

position = Vector2( 670.582, 235.982 )
scale = Vector2( 1.74859, 1.12759 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="Sprite" type="Sprite" parent="map03" index="0"]

visible = false
position = Vector2( -0.378819, 0.766159 )
scale = Vector2( 0.267617, 0.401241 )
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="map03" index="1"]

shape = SubResource( 3 )

[node name="label" type="Label" parent="." index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 40.0
margin_bottom = 14.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="mouse_entered" from="map01" to="." method="_on_map01_mouse_entered"]

[connection signal="mouse_exited" from="map01" to="." method="_on_map01_mouse_exited"]

[connection signal="mouse_entered" from="map02" to="." method="_on_map02_mouse_entered"]

[connection signal="mouse_exited" from="map02" to="." method="_on_map02_mouse_exited"]

[connection signal="mouse_entered" from="map03" to="." method="_on_map03_mouse_entered"]

[connection signal="mouse_exited" from="map03" to="." method="_on_map03_mouse_exited"]


